<resources>
    <string name="app_name">Scheduled timer</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="action_new_schedule">New</string>
    <string name="running">running</string>
    <string name="not_running">not running</string>
    <string name="schedule_item_name_hint">Press to enter name</string>
    <string name="timer_name">Timer name</string>
    <string name="time_point">Timer name</string>
    <string name="add_point">add timer point</string>
    <string name="ok">OK</string>
    <string name="period">period</string>
    <string name="exact_time">exact time</string>
    <string name="duplicate">Duplicate</string>
    <string name="timer">Timer</string>
    <string name="hint_time_picker_message">message</string>
    <string name="vibration">Vibration</string>
    <string name="pop_up">Pop-up</string>
    <string name="led_color">LED Color</string>
    <string name="ringtone">Ringtone</string>
    <string name="notification_settings">Notification settings</string>
    <string name="repeat">Repeat</string>
    <string name="show_in_notification_bar">Show in notification bar</string>
    <string name="stop_timer">Stop timer</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="white">White</string>
    <string name="set">Set</string>
    <string name="disable">Disable</string>
    <string name="none">None</string>
    <string name="channel_name">channel_name</string>



</resources>
