<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ui.ScheduleItemActivity"
      android:title="@string/done"
    >

    <item
        android:id="@+id/action_schedule_item_done"
        android:icon="@drawable/ic_done"
        android:orderInCategory="1"
        android:title="@string/done"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_schedule_item_duplicate"
        android:orderInCategory="100"
        android:title="@string/duplicate"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_schedule_item_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never"
        />

</menu>
