<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.activity.ScheduleItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_point_lis"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/schedule_item_btn_add_point"
                            style="@style/RaisedButton"
                            android:drawableStart="@drawable/ic_add"
                            android:text="@string/add_point" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/scheduled_timer_repeat"
                        style="@style/MyCheckBox"
                        android:layout_gravity="center_vertical"
                        android:text="@string/repeat" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_item_rv_time_point_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_title"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/schedule_item_timer_name"
                    style="@style/MyTextViewMedium"
                    tools:text="@string/timer_name" />

                <TextView
                    android:id="@+id/schedule_item_name_hint"
                    style="@style/MyTextViewSmall"
                    android:text="@string/schedule_item_name_hint"

                    android:textColor="@color/primary_text" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_title1"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTextViewMedium"
                        android:text="@string/show_in_notification_bar" />

                    <TextView
                        style="@style/MyTextViewSmall"
                        android:text="Show current status " />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch1"
                    style="@style/MySwitch" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_vibration"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTextViewMedium"
                        android:text="@string/vibration" />

                    <TextView
                        style="@style/MyTextViewSmall"
                        android:text="Use vibration" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/scheduled_timer_vibration"
                    style="@style/MySwitch" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_pop_up"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTextViewMedium"
                        android:text="@string/pop_up" />

                    <TextView
                        style="@style/MyTextViewSmall"
                        android:text="Use pop-up notification" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/scheduled_timer_pop_up"
                    style="@style/MySwitch" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_ringtone"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <TextView
                        style="@style/MyTextViewMedium"
                        android:text="@string/ringtone" />

                    <TextView
                        style="@style/MyTextViewSmall"
                        android:text="Press to set a ringtone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_led_light"
            style="@style/MyCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MyTextViewMedium"
                    android:text="@string/led_light" />
                />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
