<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            tools:context="ui.activity.ScheduleItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:id="@+id/item_fake_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_point_lis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:background="@drawable/card_view_effect"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/schedule_item_btn_add_point"
                        style="@style/RaisedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"

                        android:text="@string/add_point"
                        android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/scheduled_timer_repeat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical|right"
                        android:text="@string/repeat"/>

                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_item_rv_time_point_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View style="@style/Divider"/>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@drawable/card_view_effect"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="sans-serif"
                    android:text="time line"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="run"/>


            </LinearLayout>
                <TextView

                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="sans-serif-medium"
                    tools:text="----------------------------"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View style="@style/Divider"/>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@drawable/card_view_effect"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/schedule_item_timer_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="sans-serif-medium"
                    tools:text="@string/timer_name"/>

                <TextView
                    android:id="@+id/schedule_item_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="sans-serif"
                    android:text="@string/schedule_item_name_hint"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View style="@style/Divider"/>

        <android.support.v7.widget.CardView
            android:id="@+id/schedule_item_cv_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@drawable/card_view_effect"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Show in notification bar //!"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hint //!"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View style="@style/Divider"/>

        <View style="@style/Divider"/>

        <Switch
            android:id="@+id/scheduled_timer_vibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibration"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <View style="@style/Divider"/>

        <Switch
            android:id="@+id/scheduled_timer_pop_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_up"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone"/>

        <View style="@style/Divider"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/led_light"/>

        <View style="@style/Divider"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
